--- a/app/views/partials/wsview.scala.html
+++ b/app/views/partials/wsview.scala.html
@@ -1,4 +1,4 @@
-<div class="panel-heading"
+@()<div class="panel-heading"
 unselectable="yes" 
 onselectstart="return false" 
 onmousedown="return false">
