Add vis js for flow representation

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -10,10 +10,11 @@
     <title>DCS Workspace</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" media="screen" href="@routes.WebJarAssets.at(webJarAssets.locate("css/bootstrap.min.css"))" />
+    <link rel="stylesheet" media="screen" href="@routes.WebJarAssets.at(webJarAssets.locate("bootstrap", "css/bootstrap.min.css"))" />
     <link rel="stylesheet" media="screen" href="@routes.WebJarAssets.at(webJarAssets.locate("css/font-awesome.min.css"))" />
     <link rel="stylesheet" media="screen" href="@routes.WebJarAssets.at(webJarAssets.locate("dist/css/normalize.css"))" />
     <link rel="stylesheet" media="screen" href="@routes.WebJarAssets.at(webJarAssets.locate("dist/css/main.css"))" />
+    <link rel="stylesheet" media="screen" href="@routes.WebJarAssets.at(webJarAssets.locate("visjs", "vis.css"))" />
     <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/app.css")"/>
 
 
