--- a/app/views/partials/analyse/jsview.scala.html
+++ b/app/views/partials/analyse/jsview.scala.html
@@ -1,4 +1,12 @@
 @()
-<a href="{{nifiUrl}}" target="_NiFi Flow">
- <img src="assets/images/nifi.png" alt="Analyse JS Test View"  style="width:100%;height:100%;border:0">
-</a>
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li><a href="{{nifiUrl}}" target="_NiFi Flow">nifi</a></li>
+            </ul>
+        </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+</nav>
+<div flow-vis style="width: 100%; height: 100%; overflow-y: auto;"> </div>
