--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -155,8 +155,8 @@ html, body {
 
 }
 .navbar {
-    min-height:28px !important;
-    background-color: #cceeff;
+    min-height:35px !important;
+    background-color: #e6ffee;
 }
 
 
