--- a/app/views/partials/analyse/jsview.scala.html
+++ b/app/views/partials/analyse/jsview.scala.html
@@ -1,12 +1,25 @@
 @()
+<header>
 <nav class="navbar navbar-default">
     <div class="container-fluid">
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
                 <li><a href="{{nifiUrl}}" target="_NiFi Flow">nifi</a></li>
+                <li ng-controller="FlowTemplatesController">
+                    <!-- Simple dropdown -->
+                    <span uib-dropdown on-toggle="toggled(open)">
+                        <a href id="simple-dropdown" uib-dropdown-toggle>templates</a>
+                        <ul class="dropdown-menu" uib-dropdown-menu aria-labelledby="simple-dropdown">
+                            <li ng-repeat="choice in templates">
+                                <a href>{{choice}}</a>
+                            </li>
+                        </ul>
+                    </span>
+                </li>
             </ul>
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
 </nav>
+</header>
 <div flow-vis style="width: 100%; height: 100%; overflow-y: auto;"> </div>
