--- a/app/views/partials/analyse/jsview.scala.html
+++ b/app/views/partials/analyse/jsview.scala.html
@@ -1,5 +1,4 @@
 @()
-<header>
 <nav class="navbar navbar-default">
     <div class="container-fluid">
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -9,7 +8,7 @@
                 <li ng-controller="FlowTemplatesController">
                     <!-- Simple dropdown -->
                     <span uib-dropdown on-toggle="toggled(open)">
-                        <a href id="simple-dropdown" uib-dropdown-toggle>templates</a>
+                        <a href id="simple-dropdown" uib-dropdown-toggle>flow</a>
                         <ul class="dropdown-menu" uib-dropdown-menu aria-labelledby="simple-dropdown">
                             <li ng-repeat="choice in templates">
                                 <a href>{{choice}}</a>
@@ -21,5 +20,4 @@
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
 </nav>
-</header>
-<div flow-vis style="width: 100%; height: 100%; overflow-y: auto;"> </div>
+<div flow-vis style="width: 100%; height: 100%; overflow-y: auto;"></div>
