Add initial setup for angular-2 (typescript + sbt plugins + systemjs config)

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -16,7 +16,15 @@
     <link rel="stylesheet" media="screen" href="@routes.WebJarAssets.at(webJarAssets.locate("dist/css/main.css"))" />
     <link rel="stylesheet" media="screen" href="@routes.WebJarAssets.at(webJarAssets.locate("visjs", "vis.css"))" />
     <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/app.css")"/>
-
+    <script src="@routes.WebJarAssets.at(webJarAssets.locate("shim.min.js"))"></script>
+    <script src="@routes.WebJarAssets.at(webJarAssets.locate("dist/zone.js"))"></script>
+    <script src="@routes.WebJarAssets.at(webJarAssets.fullPath("reflect-metadata", "Reflect.js"))"></script>
+    <script src="@routes.WebJarAssets.at(webJarAssets.locate("system.src.js"))"></script>
+    <!-- 2. Configure SystemJS -->
+    <script src="@routes.Assets.versioned("javascripts/systemjs.config.js")"></script>
+    <script>
+      System.import('app').catch(function(err){ console.error(err); });
+    </script>
 </head>
 <body>
     <div class="flex-box container-row">
@@ -32,5 +40,4 @@
         </div>
         <div class="flex-item panel panel-default" ws-view view-name="analyse" view-type="js"></div>
     </div>
-    <script data-main="@routes.Assets.versioned("javascripts/main.js")" src="@routes.WebJarAssets.at(webJarAssets.locate("require.min.js"))"></script>
 </body>
