Add dummy app to check tslint

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -27,17 +27,5 @@
     </script>
 </head>
 <body>
-    <div class="flex-box container-row">
-        <div class="flex-item flex-box container-column">
-            <div class="flex-item panel panel-default" ws-view view-name="visualise" view-type="js"></div>
-            <div container-resize cr-type="column">
-                <div class="grabber column"></div>
-            </div>
-            <div class="flex-item panel panel-default" ws-view view-name="mobilise" view-type="js"></div>
-        </div>
-        <div container-resize cr-type="row">
-            <div class="grabber row"></div>
-        </div>
-        <div class="flex-item panel panel-default" ws-view view-name="analyse" view-type="js"></div>
-    </div>
+    <app>Loading ... </app>
 </body>
