--- a/app/views/partials/wsview.scala.html
+++ b/app/views/partials/wsview.scala.html
@@ -1,8 +1,9 @@
-@()<div class="panel-heading"
+@()
+<div class="panel-heading"
 unselectable="yes" 
 onselectstart="return false" 
 onmousedown="return false">
-{{viewName}}
+{{name}}
     <div class="btn-group btn-group-sm pull-right">                        
         <button type="button" class="btn" ><span class="fa fa-arrows-alt"></span></button>
     </div>
@@ -10,6 +11,6 @@ onmousedown="return false">
         <button type="button" class="btn" ><span class="fa fa-expand"></span></button>
     </div>
 </div>
-<div class="panel-body" ws-panel-body>
-	<div ng-controller="WsViewController" ng-include="getTemplateUrl()" style="min-height:100%;height:100%;"></div>
+<div class="panel-body" ws-panel>
+	@*<div ng-controller="WsViewController" ng-include="getTemplateUrl()" style="min-height:100%;height:100%;"></div>*@
 </div>
