Update the workspace views to angular 2

--- a/app/views/partials/wsview.scala.html
+++ b/app/views/partials/wsview.scala.html
@@ -13,4 +13,8 @@ onmousedown="return false">
 </div>
 <div class="panel-body" ws-panel>
 	@*<div ng-controller="WsViewController" ng-include="getTemplateUrl()" style="min-height:100%;height:100%;"></div>*@
+    <visualise *ngIf="name === 'visualise'"></visualise>
+    <mobilise *ngIf="name === 'mobilise'"></mobilise>
+    <analyse *ngIf="name === 'analyse'"></analyse>
+
 </div>
