--- a/app/views/partials/analyse/view.scala.html
+++ b/app/views/partials/analyse/view.scala.html
@@ -5,13 +5,13 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
                 <li><a href="{{nifiUrl}}" target="_NiFi Flow">nifi</a></li>
-                <li ng-controller="FlowTemplatesController">
+                <li>
                     <!-- Simple dropdown -->
-                    <span uib-dropdown on-toggle="toggled(open)">
+                    <span uib-dropdown >
                         <a href id="simple-dropdown" uib-dropdown-toggle>flow</a>
                         <ul class="dropdown-menu" uib-dropdown-menu aria-labelledby="simple-dropdown">
-                            <li ng-repeat="choice in templates">
-                                <a href>{{choice}}</a>
+                            <li *ngFor="let choice of templates">
+                                <a href>{{choice.id}}</a>
                             </li>
                         </ul>
                     </span>
@@ -20,4 +20,4 @@
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
 </nav>
-<div flow-vis style="width: 100%; height: 100%; overflow-y: auto;"></div>
+<div visjs ></div>
