--- a/app/views/partials/analyse/view.scala.html
+++ b/app/views/partials/analyse/view.scala.html
@@ -1,23 +1,33 @@
 @()
-<nav class="navbar navbar-default">
-    <div class="container-fluid">
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
-                <li><a href="{{nifiUrl}}" target="_NiFi Flow">nifi</a></li>
-                <li>
-                    <!-- Simple dropdown -->
-                    <span uib-dropdown >
-                        <a href id="simple-dropdown" uib-dropdown-toggle>flow</a>
-                        <ul class="dropdown-menu" uib-dropdown-menu aria-labelledby="simple-dropdown">
-                            <li *ngFor="let choice of templates">
-                                <a href>{{choice.id}}</a>
-                            </li>
-                        </ul>
-                    </span>
-                </li>
-            </ul>
-        </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
+@*<nav class="navbar navbar-light bg-faded">*@
+
+@*<ul class="nav navbar-nav">*@
+@*<li><a href="{{nifiUrl}}" target="_NiFi Flow">nifi</a></li>*@
+@*<li>*@
+@*<span dropdown >*@
+@*<a href id="simple-dropdown" dropdownToggle>flow</a>*@
+@*<ul class="dropdown-menu" dropdownMenu aria-labelledby="simple-dropdown">*@
+@*<li *ngFor="let choice of templates">*@
+@*<a href>{{choice.id}}</a>*@
+@*</li>*@
+@*</ul>*@
+@*</span>*@
+@*</li>*@
+@*</ul>*@
+@*</nav>*@
+<nav class="navbar navbar-light bg-faded">
+    <a class="navbar-brand" href="{{nifiUrl}}" target="_NiFi Flow">Nifi</a>
+    <ul class="nav navbar-nav">
+        <li class="nav-item active">
+            <span dropdown>
+                <a href id="simple-dropdown" dropdownToggle>flow</a>
+                <ul class="dropdown-menu" dropdownMenu aria-labelledby="simple-dropdown">
+                    <li *ngFor="let choice of templates">
+                        <a class="dropdown-item" href="#">{{choice.id}}</a>
+                    </li>
+                </ul>
+            </span>
+        </li>
+    </ul>
 </nav>
-<div visjs ></div>
+<div flow-graph ></div>
