--- a/app/views/partials/analyse/view.scala.html
+++ b/app/views/partials/analyse/view.scala.html
@@ -1,23 +1,9 @@
 @()
-@*<nav class="navbar navbar-light bg-faded">*@
-
-@*<ul class="nav navbar-nav">*@
-@*<li><a href="{{nifiUrl}}" target="_NiFi Flow">nifi</a></li>*@
-@*<li>*@
-@*<span dropdown >*@
-@*<a href id="simple-dropdown" dropdownToggle>flow</a>*@
-@*<ul class="dropdown-menu" dropdownMenu aria-labelledby="simple-dropdown">*@
-@*<li *ngFor="let choice of templates">*@
-@*<a href>{{choice.id}}</a>*@
-@*</li>*@
-@*</ul>*@
-@*</span>*@
-@*</li>*@
-@*</ul>*@
-@*</nav>*@
 <nav class="navbar navbar-light bg-faded">
-    <a class="navbar-brand" href="{{nifiUrl}}" target="_NiFi Flow">Nifi</a>
     <ul class="nav navbar-nav">
+        <li class="nav-item active">
+            <a href="{{nifiUrl}}" target="_NiFi Flow">Nifi</a>
+        </li>
         <li class="nav-item active">
             <span dropdown>
                 <a href id="simple-dropdown" dropdownToggle>flow</a>
