--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -31,7 +31,7 @@ html, body {
   background: white;  
   margin: 0;
   padding: 0;
-  height:100%;
+
   color: black;  
   font-size: 20px;
   text-align: left;
@@ -45,7 +45,7 @@ html, body {
 .card-block {
   margin: 0;
   padding: 1px;
-  max-height: 10px;
+  height: 90%;
   -webkit-box-flex: 1;
   -webkit-flex: 1;
   -ms-flex: 1;
@@ -54,6 +54,7 @@ html, body {
 
 .card {
   border:1px solid grey;
+  height: 100%;
 }
 
 .card-header {
@@ -96,50 +97,6 @@ html, body {
 
 
 
-.visualise {
-  background-image: -webkit-gradient(
-    linear,
-    left top,
-    left bottom,
-    color-stop(0, #EB6C6C),
-    color-stop(1, #782E2E)
-    );
-  background-image: -o-linear-gradient(bottom, #EB6C6C 0%, #782E2E 100%);
-  background-image: -moz-linear-gradient(bottom, #EB6C6C 0%, #782E2E 100%);
-  background-image: -webkit-linear-gradient(bottom, #EB6C6C 0%, #782E2E 100%);
-  background-image: -ms-linear-gradient(bottom, #EB6C6C 0%, #782E2E 100%);
-  background-image: linear-gradient(to bottom, #EB6C6C 0%, #782E2E 100%);
-}
-
-.mobilise {
-  background-image: -webkit-gradient(
-    linear,
-    left bottom,
-    left bottom,
-    color-stop(0, #0F185C),
-    color-stop(1, #91BBFF)
-    );
-  background-image: -o-linear-gradient(left bottom, #0F185C 0%, #91BBFF 100%);
-  background-image: -moz-linear-gradient(left bottom, #0F185C 0%, #91BBFF 100%);
-  background-image: -webkit-linear-gradient(left bottom, #0F185C 0%, #91BBFF 100%);
-  background-image: -ms-linear-gradient(left bottom, #0F185C 0%, #91BBFF 100%);
-  background-image: linear-gradient(to left bottom, #0F185C 0%, #91BBFF 100%);
-}
-
-.analyse {
-  background-image: -webkit-gradient(
-    linear,
-    left bottom,
-    left bottom,
-    color-stop(0, #9FCE83),
-    color-stop(1, #1A3B07)
-    );
-  background-image: -o-linear-gradient(left bottom, #9FCE83 0%, #1A3B07 100%);
-  background-image: -moz-linear-gradient(left bottom, #9FCE83 0%, #1A3B07 100%);
-  background-image: -webkit-linear-gradient(left bottom, #9FCE83 0%, #1A3B07 100%);
-  background-image: -ms-linear-gradient(left bottom, #9FCE83 0%, #1A3B07 100%);
-  background-image: linear-gradient(to left bottom, #9FCE83 0%, #1A3B07 100%);  
-}
 
 .nav-tabs > li > a
 {
@@ -162,18 +119,62 @@ html, body {
 .flow-graph {
   width: 100%;
   height: 100%;
-  overflow-y: auto;
 }
 
 .wsview {
-  min-height:100%;
   height:100%;
 }
 
-svg {
-  display: block;
-  width: 100%;
-  height: auto;
+
+
+.visualise {
+  /*background-image: -webkit-gradient(*/
+  /*linear,*/
+  /*left top,*/
+  /*left bottom,*/
+  /*color-stop(0, #EB6C6C),*/
+  /*color-stop(1, #782E2E)*/
+  /*);*/
+  /*background-image: -o-linear-gradient(bottom, #EB6C6C 0%, #782E2E 100%);*/
+  /*background-image: -moz-linear-gradient(bottom, #EB6C6C 0%, #782E2E 100%);*/
+  /*background-image: -webkit-linear-gradient(bottom, #EB6C6C 0%, #782E2E 100%);*/
+  /*background-image: -ms-linear-gradient(bottom, #EB6C6C 0%, #782E2E 100%);*/
+  /*background-image: linear-gradient(to bottom, #EB6C6C 0%, #782E2E 100%);*/
+  height: 50%;
+}
+
+.mobilise {
+  /*background-image: -webkit-gradient(*/
+  /*linear,*/
+  /*left bottom,*/
+  /*left bottom,*/
+  /*color-stop(0, #0F185C),*/
+  /*color-stop(1, #91BBFF)*/
+  /*);*/
+  /*background-image: -o-linear-gradient(left bottom, #0F185C 0%, #91BBFF 100%);*/
+  /*background-image: -moz-linear-gradient(left bottom, #0F185C 0%, #91BBFF 100%);*/
+  /*background-image: -webkit-linear-gradient(left bottom, #0F185C 0%, #91BBFF 100%);*/
+  /*background-image: -ms-linear-gradient(left bottom, #0F185C 0%, #91BBFF 100%);*/
+  /*background-image: linear-gradient(to left bottom, #0F185C 0%, #91BBFF 100%);*/
+
+  height: 50%
+}
+
+.analyse {
+  /*background-image: -webkit-gradient(*/
+  /*linear,*/
+  /*left bottom,*/
+  /*left bottom,*/
+  /*color-stop(0, #9FCE83),*/
+  /*color-stop(1, #1A3B07)*/
+  /*);*/
+  /*background-image: -o-linear-gradient(left bottom, #9FCE83 0%, #1A3B07 100%);*/
+  /*background-image: -moz-linear-gradient(left bottom, #9FCE83 0%, #1A3B07 100%);*/
+  /*background-image: -webkit-linear-gradient(left bottom, #9FCE83 0%, #1A3B07 100%);*/
+  /*background-image: -ms-linear-gradient(left bottom, #9FCE83 0%, #1A3B07 100%);*/
+  /*background-image: linear-gradient(to left bottom, #9FCE83 0%, #1A3B07 100%);*/
+
+  height: 100%;
 }
 
 
