--- a/app/views/partials/wsview.scala.html
+++ b/app/views/partials/wsview.scala.html
@@ -1,18 +1,27 @@
 @()
 <div class="card-header"
-unselectable="yes" 
-onselectstart="return false" 
+unselectable="yes"
+onselectstart="return false"
 onmousedown="return false">
 {{name}}
-    <div class="btn-group btn-group-sm pull-right">                        
+    <div class="btn-group btn-group-sm pull-right">
         <button type="button" class="btn" ><span class="fa fa-arrows-alt"></span></button>
     </div>
-    <div class="btn-group btn-group-sm pull-right">                        
+    <div class="btn-group btn-group-sm pull-right">
         <button type="button" class="btn" ><span class="fa fa-expand"></span></button>
     </div>
 </div>
+@*<div *ngIf="name === 'analyse'" class="card-block analyse" ws-panel>*@
+    @*<analyse class="wsview"></analyse>*@
+@*</div>*@
+@*<div *ngIf="name === 'mobilise'" class="card-block  mobilise" ws-panel>*@
+    @*<mobilise class="wsview" ></mobilise>*@
+@*</div>*@
+@*<div *ngIf="name === 'visualise'" class="card-block  visualise" ws-panel>*@
+    @*<visualise class="wsview"></visualise>*@
+@*</div>*@
+
 <div class="card-block" ws-panel>
-	@*<div ng-controller="WsViewController" ng-include="getTemplateUrl()" style="min-height:100%;height:100%;"></div>*@
     <visualise class="wsview" *ngIf="name === 'visualise'"></visualise>
     <mobilise class="wsview" *ngIf="name === 'mobilise'"></mobilise>
     <analyse class="wsview" *ngIf="name === 'analyse'"></analyse>
