Fix problems with template instantiation

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -24,5 +24,8 @@
     </script>
 </head>
 <body>
-    <app>Loading ... </app>
+    <app>
+        <p style="font-size: 125%;text-align:center;color:green;"><b>loading ....</b></p>
+    </app>
+
 </body>
