--- a/app/views/partials/analyse/view.scala.html
+++ b/app/views/partials/analyse/view.scala.html
@@ -9,7 +9,7 @@
                 <a href id="simple-dropdown" dropdownToggle>flow</a>
                 <ul class="dropdown-menu" dropdownMenu aria-labelledby="simple-dropdown">
                     <li *ngFor="let choice of templates">
-                        <a class="dropdown-item" href="#">{{choice.id}}</a>
+                        <a class="dropdown-item" href="#">{{choice.name}}</a>
                     </li>
                 </ul>
             </span>
