--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -178,24 +178,37 @@ html, body {
 }
 
 
+
+.background {
+  fill: white;
+}
+
 .node {
   stroke: #fff;
   stroke-width: 1.5px;
   cursor: move;
+  fill: #550000;
+}
+
+.group {
+  stroke: #fff;
+  stroke-width: 1.5px;
+  cursor: move;
+  opacity: 0.7;
 }
 
 .link {
-  stroke: #999;
+  stroke: #555;
   stroke-width: 3px;
   stroke-opacity: 1;
+  marker-end: url(#end-arrow);
 }
 
-.label {
+.flowlabel {
   fill: white;
   font-family: Verdana;
   font-size: 25px;
   text-anchor: middle;
   cursor: move;
 }
-
 
