--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -18,7 +18,7 @@
     <script src="@routes.Assets.versioned("lib/reflect-metadata/Reflect.js")"></script>
     <script src="@routes.Assets.versioned("lib/systemjs/dist/system.src.js")"></script>
 
-    <script src="@routes.Assets.versioned("javascripts/systemjs.config.js")"></script>
+    <script src="@routes.Assets.versioned("javascripts/test.systemjs.config.js")"></script>
     <script>
       System.import('app').catch(function(err){ console.error(err); });
     </script>
