--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -17,7 +17,7 @@
     <script src="@routes.Assets.versioned("lib/zone.js/dist/zone.js")"></script>
     <script src="@routes.Assets.versioned("lib/reflect-metadata/Reflect.js")"></script>
     <script src="@routes.Assets.versioned("lib/systemjs/dist/system.src.js")"></script>
-
+    <script src="@routes.Assets.versioned("lib/webcola/WebCola/cola.js")"></script>
     <script src="@routes.Assets.versioned("javascripts/systemjs.config.js")"></script>
     <script>
       System.import('app').catch(function(err){ console.error(err); });
