Refactor flow graph view

--- a/app/views/partials/analyse/view.scala.html
+++ b/app/views/partials/analyse/view.scala.html
@@ -16,7 +16,8 @@
         </li>
     </ul>
 </nav>
-<div class="flow-graph" *ngIf="selectedTemplate">
+<div class="fill" *ngIf="selectedTemplate">
     <span class="label label-default"> {{selectedTemplate.name}} </span>
-    <div  class="flow-graph" power-flow-graph ></div>
+
 </div>
+<div  class="fill" flow-graph ></div>
