--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -212,3 +212,11 @@ html, body {
   cursor: move;
 }
 
+.d3-tip {
+  line-height: 1;
+  font-weight: bold;
+  padding: 12px;
+  background: rgba(0, 0, 0, 0.8);
+  color: #fff;
+  border-radius: 2px;
+}
