Fix issue with mouse event handling and d3 arrow url

--- a/app/views/partials/analyse/view.scala.html
+++ b/app/views/partials/analyse/view.scala.html
@@ -8,7 +8,7 @@
             <span dropdown>
                 <a href id="simple-dropdown" dropdownToggle >flow</a>
                 <ul class="dropdown-menu" dropdownMenu aria-labelledby="simple-dropdown">
-                    <li *ngFor="let choice of templates" (click)= selectTemplate(choice)>
+                    <li *ngFor="let choice of templates" (click)="selectTemplate($event, choice)">
                         <a class="dropdown-item" href="#">{{choice.name}}</a>
                     </li>
                 </ul>
