Add flow instance controls, Fix vertical resize problem using flex

--- a/app/views/partials/analyse/flowtabs.scala.html
+++ b/app/views/partials/analyse/flowtabs.scala.html
@@ -1,7 +1,7 @@
 @()
 <div class="fill" (click)="$event.preventDefault()">
-    <tabset class="fill">
-        <tab class="fill" *ngFor="let tabz of tabs"
+    <tabset class="flex-header-panel">
+        <tab  class="flex-header-panel" *ngFor="let tabz of tabs"
         [heading]="tabz.title"
         [active]="tabz.active"
         (select)="tabz.active = true"
@@ -9,8 +9,19 @@
         [disabled]="tabz.disabled"
         [removable]="tabz.removable"
         (removed)="removeTabHandler(tabz)">
-            <span class="label label-default"> {{tabz.name}} </span>
-            <div  class="fill" flow-graph [flowTab]="tabz"></div>
+            <nav class="navbar">
+                <ul class="nav navbar-nav">
+                    <li class="nav-item active">
+                        <h66>{{tabz.name}}</h66>
+                    </li>
+                </ul>
+                <div class="pull-xs-right">
+                    <button class="btn btn-secondary"><i class="fa fa-play" aria-hidden="true"></i></button>
+                    <button class="btn btn-secondary" disabled><i class="fa fa-stop" aria-hidden="true"></i></button>
+                    <button class="btn btn-secondary"><i class="fa fa-trash" aria-hidden="true"></i></button>
+                </div>
+            </nav>
+            <div  class="flex-panel" flow-graph [flowTab]="tabz"></div>
         </tab>
     </tabset>
 </div>
