--- a/app/views/partials/analyse/view.scala.html
+++ b/app/views/partials/analyse/view.scala.html
@@ -1,5 +1,5 @@
 @()
-<nav class="navbar navbar-light bg-faded">
+<nav class="navbar navbar-light bg-faded main-header">
     <ul class="nav navbar-nav">
         <li class="nav-item active">
             <a href="{{nifiUrl}}" target="_NiFi Flow">Nifi</a>
@@ -17,6 +17,6 @@
     </ul>
 </nav>
 
-<flow-tabs class="fill" [templateToInstantiate]="selectedTemplate"></flow-tabs>
+<flow-tabs class="flex-panel" [templateToInstantiate]="selectedTemplate"></flow-tabs>
 
 
