--- a/app/views/partials/layout.scala.html
+++ b/app/views/partials/layout.scala.html
@@ -10,5 +10,5 @@
     <div resize [type]="'row'">
         <div class="grabber row"></div>
     </div>
-    <ws-view name="analyse" class="flex-item card analyse"></ws-view>
+    <ws-view name="analyse" class="flex-item card flex-header-panel"></ws-view>
 </div>
