Fix Chrome flow graph flex size

--- a/app/views/partials/analyse/flowtabs.scala.html
+++ b/app/views/partials/analyse/flowtabs.scala.html
@@ -21,7 +21,7 @@
                     <button class="btn btn-secondary"><i class="fa fa-trash" aria-hidden="true"></i></button>
                 </div>
             </nav>
-            <div  class="flex-panel" flow-graph [flowTab]="tabz"></div>
+            <div  class="flex-panel flex-header-panel" flow-graph [flowTab]="tabz"></div>
         </tab>
     </tabset>
 </div>
