--- a/app/views/partials/analyse/flowtabs.scala.html
+++ b/app/views/partials/analyse/flowtabs.scala.html
@@ -18,7 +18,7 @@
                 <div class="pull-xs-right">
                     <button class="btn btn-secondary"><i class="fa fa-play" aria-hidden="true"></i></button>
                     <button class="btn btn-secondary" disabled><i class="fa fa-stop" aria-hidden="true"></i></button>
-                    <button class="btn btn-secondary"><i class="fa fa-trash" aria-hidden="true"></i></button>
+                    <button class="btn btn-secondary" (click)="deleteTab(tabz)"><i class="fa fa-trash" aria-hidden="true"></i></button>
                 </div>
             </nav>
             <div  class="flex-panel flex-header-panel" flow-graph [flowTab]="tabz"></div>
