Refactor template instantiation to fix issue to load same template consequently

--- a/app/views/partials/analyse/view.scala.html
+++ b/app/views/partials/analyse/view.scala.html
@@ -14,6 +14,6 @@
     </ul>
 </nav>
 
-<flow-tabs class="flex-panel" [templateToInstantiate]="selectedTemplate"></flow-tabs>
+<flow-tabs class="flex-panel" [addFlowInstance]="flowInstanceToAdd"></flow-tabs>
 
 
