--- a/app/views/partials/analyse/flowtabs.scala.html
+++ b/app/views/partials/analyse/flowtabs.scala.html
@@ -15,12 +15,13 @@
                     <a class="btn btn-secondary" href="{{nifiUrl}}" target="_NiFi Flow">
                         <img src="assets/images/bgNifiLogo.png" alt="nifi" height="24" width="20">
                     </a>
-                    <button class="btn btn-secondary" (click)="startFlow(tabz)"><i class="fa fa-play" aria-hidden="true"></i></button>
-                    <button class="btn btn-secondary" (click)="stopFlow(tabz)"><i class="fa fa-stop" aria-hidden="true"></i></button>
-                    <button class="btn btn-secondary" (click)="deleteTab(tabz)"><i class="fa fa-trash" aria-hidden="true"></i></button>
+                    <button class="btn btn-secondary" (click)="refreshFlow(tabz)"><i class="fa fa-refresh" aria-hidden="true"></i></button>
+                    <button class="btn btn-secondary" (click)="startFlow(tabz)"><i class="fa fa-play"    aria-hidden="true"></i></button>
+                    <button class="btn btn-secondary" (click)="stopFlow(tabz)" ><i class="fa fa-stop"    aria-hidden="true"></i></button>
+                    <button class="btn btn-secondary" (click)="deleteTab(tabz)"><i class="fa fa-trash"   aria-hidden="true"></i></button>
                 </div>
             </nav>
-            <div  class="flex-panel flex-header-panel" flow-graph [flowTab]="tabz"></div>
+            <div  class="flex-panel flex-header-panel" flow-graph [showFlowInstance]="tabz.flowInstance"></div>
         </tab>
     </tabset>
 </div>
