--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -104,16 +104,14 @@ html, body {
 
 
 .visualise {
-  height: 50%;
+
+  overflow: hidden;
 }
 
 .mobilise {
-  height: 50%
+
+  overflow: hidden;
 }
-
-/*.analyse {*/
-/*}*/
-
 
 
 .background {
@@ -170,7 +168,7 @@ html, body {
   height:100%;
 }
 
-.flex-header-panel {
+.flex-panel-parent {
   width: 100%;
   height: 100%;
   display:-webkit-flex;
@@ -192,5 +190,22 @@ html, body {
   display:-webkit-flex;
   display:flex;
 }
+
+.table-scrollable {
+  margin: 0;
+  padding: 0;
+}
+
+.table-container {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  overflow-y: scroll;
+}
+
+
+
+
 
 
