--- a/app/views/partials/mobilise/view.scala.html
+++ b/app/views/partials/mobilise/view.scala.html
@@ -1,2 +1,86 @@
 @()
-<p>Mobilise JS Test View</p>
+<nav class="navbar navbar-light bg-faded main-header">
+    <ul class="nav navbar-nav">
+        <li class="nav-item active" >
+            <div class="nav-link">view</div>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">last 10</a>
+        </li>
+        <li class="nav-item active" >
+            <div class="nav-link">as</div>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">raw</a>
+        </li>
+    </ul>
+</nav>
+
+<div class="flex-panel table-container">
+    <table class="table table-striped table-bordered table-hover table-sm  table-scrollable fill">
+        <thead class="thead-inverse">
+            <tr>
+                <th>#</th>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>Username</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <th scope="row">1</th>
+                <td>Mark</td>
+                <td>Otto</td>
+                <td>mdo</td>
+            </tr>
+            <tr>
+                <th scope="row">2</th>
+                <td>Jacob</td>
+                <td>Thornton</td>
+                <td>fat</td>
+            </tr>
+            <tr>
+                <th scope="row">3</th>
+                <td>Larry</td>
+                <td>the Bird</td>
+                <td>twitter</td>
+            </tr>
+            <tr>
+                <th scope="row">3</th>
+                <td>Larry</td>
+                <td>the Bird</td>
+                <td>twitter</td>
+            </tr>
+            <tr>
+                <th scope="row">3</th>
+                <td>Larry</td>
+                <td>the Bird</td>
+                <td>twitter</td>
+            </tr>
+            <tr>
+                <th scope="row">3</th>
+                <td>Larry</td>
+                <td>the Bird</td>
+                <td>twitter</td>
+            </tr>
+            <tr>
+                <th scope="row">3</th>
+                <td>Larry</td>
+                <td>the Bird</td>
+                <td>twitter</td>
+            </tr>
+            <tr>
+                <th scope="row">3</th>
+                <td>Larry</td>
+                <td>the Bird</td>
+                <td>twitter</td>
+            </tr>
+            <tr>
+                <th scope="row">3</th>
+                <td>Larry</td>
+                <td>the Bird</td>
+                <td>twitter</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
