--- a/app/views/partials/wsview.scala.html
+++ b/app/views/partials/wsview.scala.html
@@ -13,7 +13,7 @@ onmousedown="return false">
 </div>
 
 <div class="card-block flex-panel">
-    <visualise class="wsview" *ngIf="name === 'visualise'"></visualise>
-    <mobilise class="wsview" *ngIf="name === 'mobilise'"></mobilise>
-    <analyse class="flex-header-panel" *ngIf="name === 'analyse'"></analyse>
+    <visualise class="flex-panel-parent" *ngIf="name === 'visualise'"></visualise>
+    <mobilise class="flex-panel-parent" *ngIf="name === 'mobilise'"></mobilise>
+    <analyse class="flex-panel-parent" *ngIf="name === 'analyse'"></analyse>
 </div>
