Implement feedback for flow controls, Add modal error popup, Add select to mobilise navbar

--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -203,6 +203,18 @@ html, body {
   overflow-y: scroll;
 }
 
+.btn.red {
+  color:red
+}
+
+.btn.green {
+  color:green
+}
+
+.btn.black {
+  color:black
+}
+
 
 
 
