--- a/app/views/partials/analyse/flowtabs.scala.html
+++ b/app/views/partials/analyse/flowtabs.scala.html
@@ -10,15 +10,27 @@
         [removable]="tabz.removable"
         (removed)="removeTabHandler(tabz)">
             <nav class="navbar">
-                <button class="btn btn-secondary" (click)="toggleTabLabel(tabz)">{{tabLabel(tabz)}}</button>
+                <button
+                class="btn btn-secondary"
+                [ngClass]="{green: tabz.isRunning(), red: tabz.isStopped(), black: tabz.isNotStarted()}"
+                (click)="toggleTabLabel(tabz)">{{tabLabel(tabz)}}
+                </button>
                 <div class="pull-xs-right">
                     <a class="btn btn-secondary" href="{{nifiUrl}}" target="_NiFi Flow">
                         <img src="assets/images/bgNifiLogo.png" alt="nifi" height="24" width="20">
                     </a>
-                    <button class="btn btn-secondary" (click)="refreshFlow(tabz)"><i class="fa fa-refresh" aria-hidden="true"></i></button>
-                    <button class="btn btn-secondary" (click)="startFlow(tabz)"><i class="fa fa-play"    aria-hidden="true"></i></button>
-                    <button class="btn btn-secondary" (click)="stopFlow(tabz)" ><i class="fa fa-stop"    aria-hidden="true"></i></button>
-                    <button class="btn btn-secondary" (click)="deleteTab(tabz)"><i class="fa fa-trash"   aria-hidden="true"></i></button>
+                    <button class="btn btn-secondary" (click)="refreshFlow(tabz)">
+                        <i class="fa fa-refresh" aria-hidden="true"></i>
+                    </button>
+                    <button class="btn btn-secondary" (click)="startFlow(tabz)" [disabled]="tabz.isRunning()">
+                        <i class="fa fa-play" aria-hidden="true"></i>
+                    </button>
+                    <button class="btn btn-secondary" (click)="stopFlow(tabz)" [disabled]="tabz.isStopped() || tabz.isNotStarted()">
+                        <i class="fa fa-stop" aria-hidden="true"></i>
+                    </button>
+                    <button class="btn btn-secondary" (click)="deleteTab(tabz)" [disabled]="tabz.isRunning()">
+                        <i class="fa fa-trash" aria-hidden="true"></i>
+                    </button>
                 </div>
             </nav>
             <div  class="flex-panel flex-panel-parent" flow-graph [showFlowInstance]="tabz.flowInstance"></div>
