--- a/app/views/partials/mobilise/content.scala.html
+++ b/app/views/partials/mobilise/content.scala.html
@@ -1,6 +1,20 @@
 @()
-<div class="fill">
-    <table class="table table-striped table-bordered table-hover table-sm  table-scrollable fill">
+<nav class="navbar navbar-light bg-faded main-header" *ngIf="hasResults()">
+    <form class="navbar-form form-inline">
+        <label for="rows">rows : </label>
+        <select name="rows" id="rows" class="form-control">
+            <option value="10">10</option>
+        </select>
+        <label for="format">format : </label>
+        <select name="format" id="format" class="form-control">
+            <option value="raw">raw</option>
+            <option value="csv">csv</option>
+        </select>
+    </form>
+</nav>
+
+<div class="fill" *ngIf="hasResults()">
+    <table class="table table-striped table-bordered table-hover table-sm  table-scrollable">
         <thead class="thead-inverse">
             <tr>
                 <th>#</th>
@@ -15,3 +29,5 @@
         </tbody>
     </table>
 </div>
+
+<modal #dialog="dialog"></modal>
