--- a/app/views/partials/mobilise/view.scala.html
+++ b/app/views/partials/mobilise/view.scala.html
@@ -1,19 +1,2 @@
 @()
-<nav class="navbar navbar-light bg-faded main-header">
-    <ul class="nav navbar-nav">
-        <li class="nav-item active" >
-            <div class="nav-link">view</div>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#">last 10</a>
-        </li>
-        <li class="nav-item active" >
-            <div class="nav-link">as</div>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#">raw</a>
-        </li>
-    </ul>
-</nav>
-
-<content class="table-container flex-panel" [showProvenance] = "viewManagerService.selectedProcessor"></content>
+<content class="table-container flex-panel"  [showProvenance]="selectedProcessorId()"></content>
