--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -12,6 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("lib/bootstrap/dist/css/bootstrap.min.css")" />
     <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("lib/font-awesome/css/font-awesome.min.css")" />
+    <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("lib/ng2-select/components/css/ng2-select.css")" />
 
     <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("lib/primeui/themes/omega/theme.css")" />
     <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("lib/primeui/primeui-ng-all.min.css")" />
@@ -22,6 +23,8 @@
     <script src="@routes.Assets.versioned("lib/zone.js/dist/zone.js")"></script>
     <script src="@routes.Assets.versioned("lib/reflect-metadata/Reflect.js")"></script>
     <script src="@routes.Assets.versioned("lib/systemjs/dist/system.src.js")"></script>
+
+
 
     <script src="@routes.Assets.versioned("lib/webcola/WebCola/cola.js")"></script>
     <script src="@routes.Assets.versioned("lib/primeui/primeui-ng-all.min.js")"></script>
