Integrate keycloak for webapp and api

--- a/app/views/partials/analyse/view.scala.html
+++ b/app/views/partials/analyse/view.scala.html
@@ -14,6 +14,8 @@
     </ul>
 </nav>
 
+<modal #dialog="dialog"></modal>
+
 <flow-tabs class="flex-panel" [addFlowInstance]="flowInstanceToAdd"></flow-tabs>
 
 
