--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -10,6 +10,7 @@
     <title>DCS Workspace</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("lib/bootstrap/dist/css/bootstrap.min.css")" />
     <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("lib/font-awesome/css/font-awesome.min.css")" />
 
@@ -26,6 +27,8 @@
     <script src="@routes.Assets.versioned("lib/webcola/WebCola/cola.js")"></script>
     <script src="@routes.Assets.versioned("lib/primeui/primeui-ng-all.min.js")"></script>
 
+    <script src="@routes.Assets.versioned("lib/keycloak-js/dist/keycloak.min.js")"></script>
+    <script src="@routes.Assets.versioned("lib/keycloak-js/dist/keycloak-authz.js")"></script>
     <script src="@routes.Assets.versioned("javascripts/systemjs.config.js")"></script>
     <script>
       System.import('app').catch(function(err){ console.error(err); });
