--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -13,6 +13,7 @@
 
     <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("lib/bootstrap/dist/css/bootstrap.min.css")" />
     <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("lib/font-awesome/css/font-awesome.min.css")" />
+    <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("lib/vis/dist/vis.min.css")" />
 
     <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("lib/primeui/themes/omega/theme.css")" />
     <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("lib/primeui/primeui-ng-all.min.css")" />
@@ -24,7 +25,8 @@
     <script src="@routes.Assets.versioned("lib/reflect-metadata/Reflect.js")"></script>
     <script src="@routes.Assets.versioned("lib/systemjs/dist/system.src.js")"></script>
 
-    <script src="@routes.Assets.versioned("lib/webcola/WebCola/cola.js")"></script>
+    <script src="@routes.Assets.versioned("lib/vis/dist/vis.min.js")"></script>
+
     <script src="@routes.Assets.versioned("lib/primeui/primeui-ng-all.min.js")"></script>
 
     <script src="@routes.Assets.versioned("lib/keycloak-js/dist/keycloak.min.js")"></script>
