--- a/app/views/partials/mobilise/view.scala.html
+++ b/app/views/partials/mobilise/view.scala.html
@@ -1,2 +1,2 @@
 @()
-<content class="fill flex-panel flex-panel-parent"  [showProvenance]="selectedProcessorId()"></content>
+<content class="fill flex-panel flex-panel-parent"  [showProvenance]="uiStateStore.selectedProcessorId | async"></content>
